2008-07-04 Steve Chu <stvchu@gmail.com>
   * work well with Mac OS X(tested on Lepard 10.5.4)

2008-07-03 Version 1.1.0-beta released

2008-06-26 Steve Chu <stvchu@gmail.com>
   * unix socket connectivity now has be well tested.

2008-06-13 Steve Chu <stvchu@gmail.com>
   * some code refactoring to improve a bit performance

2008-06-11 Steve Chu <stvchu@gmail.com>
   * now '-b' option is a tuning way, not a limit. item size that smaller than
   '-b' value use fast freelist alloc, otherwise, use system 'malloc' instead.
   Many thanks to Davies Liu <davies.liu@gmail.com> for patches and ideas.

2008-06-03 Steve Chu <stvchu@gmail.com>
   * new support to BerkeleyDB 4.7
     - new version is BerkeleyDB 4.7 only, due to the changed bdb api
     - 'rep_set_request' now use time, not the number of messages

   * Bugfix: 'pkget' and "multiple get" that return lots of items may 
   cause memory overflow so the daemon crashes. Thanks to Davies Liu <davies.liu@gmail.com>

   * flooded verbose messages of bdb and replication now move to '-vv' option

2008-04-13 Steve Chu <stvchu@gmail.com>
   * Changes:
     - allow limitation to 'pkget' and 'pvget' command, 
	 use 'pkget/pvget <prefix> [limit]' to get limited matched items. 
	 - 'memcache.py' is also patched for this feature.

2008-04-03 Steve Chu <stvchu@gmail.com>
   * New features: 
     - add '-T' option to set database type, 'btree' or 'hash'
     - add '-E' option to enable second database, so we can use 'pvget'
     - new command 'pkget' that you can get items with a key prefix
     - new command 'pvget' that you can get items with a value prefix
   * Changes:
     - add support to memcache.py for 'pkget' and 'pvget' command, see
	 'tools/memcache.py'

2008-03-21 Version 1.0.3 released

2008-03-21 Steve Chu <stvchu@gmail.com>
   * Bugfix: --with-bdb can not find libdb.so and db.h

2008-03-17 Steve Chu <stvchu@gmail.com>
    * add a '-A' option to set page size, and also can get this value from
    'stats bdb'
